[gd_scene load_steps=2 format=3 uid="uid://dbbdbx6psq7v8"]

[ext_resource type="Script" uid="uid://diqq1puxkxsgd" path="res://code/ui/popup/large_popup.gd" id="1_armox"]

[node name="LargePopup" type="Control"]
top_level = true
custom_minimum_size = Vector2(256, 192)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_armox")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(232, 144)
layout_mode = 0
offset_left = 148.0
offset_top = 60.0
offset_right = 380.0
offset_bottom = 204.0
theme_type_variation = &"LargePopupPC"

[node name="vbox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="title" type="Label" parent="PanelContainer/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_type_variation = &"PopupTitle"
text = "very long title description "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 4

[node name="description" type="Label" parent="PanelContainer/vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"PopupDescription"
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam maximus, est at facilisis finibus, justo nisi placerat massa, et posuere magna nulla id ex. Etiam euismod cursus orci, id sodales velit fermentum vitae. Nam lacinia velit vitae arcu tempor sollicitudin. Ut volutpat consectetur urna et mollis. Vestibulum elit lacus, gravida commodo velit eget, commodo maximus sem. In pretium venenatis vulputate. Donec at augue a nunc consectetur pulvinar. Curabitur ultricies urna ante, sit amet interdum nisi tempor sed. In hac habitasse platea dictumst. Nam sed sagittis mi."
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 4

[node name="bottom_hbox" type="HBoxContainer" parent="PanelContainer/vbox"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme_override_constants/separation = 0

[node name="spacer" type="Control" parent="PanelContainer/vbox/bottom_hbox"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="timer_label" type="Label" parent="PanelContainer/vbox/bottom_hbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"PopupTimer"
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer2" type="Control" parent="PanelContainer/vbox/bottom_hbox"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="btn_confirm" type="Button" parent="PanelContainer/vbox/bottom_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"PopupBtn"
text = "Confirm"

[node name="spacer3" type="Control" parent="PanelContainer/vbox/bottom_hbox"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="btn_cancel" type="Button" parent="PanelContainer/vbox/bottom_hbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"PopupBtn"
text = "Cancel
"

[node name="spacer4" type="Control" parent="PanelContainer/vbox/bottom_hbox"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
